* 2014-06-20 - tobias.friedrich@open-xchange.com

 - Fix for bug 32323: Introduced "acknowledge" parameter for EDIT actions to prevent implicit client-side acknowledgments of unknown files
  
* 2014-06-03 - marcus.klein@open-xchange.com

 - Fix for bug 32743: Property was added in a patch and according post installation scripting should be contained in a patch, too.

* 2014-06-02 - thorben.betten@open-xchange.com

 - Fix for bug 32555: Keep other Content-Type parameters when fixing Apple Mailer messages
 - Fix for bug 32625: Keep subscription statuses when moving IMAP folders

* 2014-05-22 - thorben.betten@open-xchange.com

 - Fix for bug 32677: Do net set SMTP credentials if not explicitly set + several sanitizing operations to ensure SMTP authentication does still work

* 2014-05-21 - thorben.betten@open-xchange.com

 - Fix for bug 32226: Fixed regex used for look-up of referenced inline images

* 2014-05-19 - thorben.betten@open-xchange.com

 - Fix for bug 32481: Ignore requests to LinkedIn JSON API if no LinkedIn OAuth account is available for associated user

* 2014-05-14 - thorben.betten@open-xchange.com

 - Fix for bug 32519: Fixed parsing JSON in case JSON NULL is set as value and fall-back to mail account credentials if transport ones seems to be "not set"

* 2014-05-13 - thorben.betten@open-xchange.com

 - Fix for bug 32226: Do not specify any cache-controlling HTTP header for "file" HTTP-API module

* 2014-05-12 - thorben.betten@open-xchange.com

 - Fix for bug 30843: Introduced properties for IMAP, POP3, and SMTP to specify the SSL cipher suites that will be enabled for SSL connections
 - Fix for bug 32466: Ignore transport credentials on primary mail account update
 
* 2014-05-07 - ioannis.chouklis@open-xchange.com

 -Fix for bug 31253: Escape the 'OK' literal at the beginning of each newline with '_OK_'

* 2014-05-05 - thorben.betten@open-xchange.com

 - Fix for bug 32296: Do not use proxy authentication for external mail accounts
