@@ -1,3 +1,8 @@
+* 2014-06-25 - marcus.klein@open-xchange.com
+
+ - Fix for bug 32860: Detect lousy clients writing always the same attribute values to the user object and avoid updating these values in
+   the storage layer.
+
 * 2014-06-20 - tobias.friedrich@open-xchange.com
 
  - Fix for bug 32323: Introduced "acknowledge" parameter for EDIT actions to prevent implicit client-side acknowledgments of unknown files
